--- a/assemblaggio.html
+++ b/assemblaggio.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>assemblaggio</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" type="text/css" href="assemblaggio.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/assemblaggio.css">
 </head>
 <body>
     <header>
@@ -11,11 +11,15 @@
           <ul>
             <h1 class="title">SMONTA PC</h1>
                     <li class="different scroll"><a href="smontaggio.html">Smontaggio</a></li>
-            <li class="different scroll"><a href="assemblaggio.html">Assemblaggio</a></li>
             <li class="different scroll"><a href="index.html">Home</a></li>
           </ul>
         </nav>
-      </header>
+    </header>
 
+      <div id="images">
+        
+      </div>
+
+      <script src="js/assemblaggio.js"></script>
 </body>
 </html>
