--- a/smontaggio.html
+++ b/smontaggio.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>smontaggio</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" type="text/css" href="smontaggio.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/smontaggio.css">
 </head>
 <body>
     <header>
