--- a/assemblaggio.html
+++ b/assemblaggio.html
@@ -10,7 +10,8 @@
         <nav>
           <ul>
             <h1 class="title">SMONTA PC</h1>
-                    <li class="different scroll"><a href="smontaggio.html">Smontaggio</a></li>
+            <li class="different scroll"><a href="smontaggio.html">Smontaggio</a></li>
+            <li class="different scroll"><a href="assemblaggio.html">Assemblaggio</a></li>
             <li class="different scroll"><a href="index.html">Home</a></li>
           </ul>
         </nav>
