--- a/index.html
+++ b/index.html
@@ -2,28 +2,26 @@
 <html>
 <head>
   <title>Guida al montaggio di un PC</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <h1 class="title">SMONTA PC</h1>
+        <h1 class="title">HOME</h1>
 				<li class="different scroll"><a href="smontaggio.html">Smontaggio</a></li>
         <li class="different scroll"><a href="assemblaggio.html">Assemblaggio</a></li>
-        <li class="different scroll"><a href="index.html">Home</a></li>
       </ul>
     </nav>
   </header>
   <div class="welcome">
 
-    <div class="testo">
-      <h3><p>Benvenuti in questa guida per l'assemblaggio e lo smontaggio di un computer fisso</p><p>Selezionando l'apposita sezione nel menù in alto si accede alle rispettive guide.</p><p>Buon lavoro!</p></h3>
-    </div>	
-    <footer>
-      <p>&copy; 2023 Guida al montaggio di un PC</p>
-    </footer>
-  </div>
+	<div class="testo">
+		<h3><p>Benvenuti in questa guida per l'assemblaggio e lo smontaggio di un computer fisso</p><p>Selezionando l'apposita sezione nel menù in alto si accede alle rispettive guide.</p><p>Buon lavoro!</p></h3>
+	</div>	
+  <footer>
+    <p>&copy; 2023 Guida al montaggio di un PC</p>
+  </footer>
 
 </body>
 </html>
